repl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASYNC
    BOOL
    CALLBACK
    FLOAT
    INT
    IS
    NOT
    QUOTES
    SEMICOLON

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> PI PLUS term
Rule 3     expression -> ID PLUS expression
Rule 4     expression -> expression MINUS term
Rule 5     expression -> PI MINUS term
Rule 6     expression -> ID MINUS expression
Rule 7     expression -> MINUS term
Rule 8     expression -> term
Rule 9     term -> FUNC LPAREN RPAREN LBRACES expression RBRACES
Rule 10    term -> FUNC LPAREN ID COMMA ID RPAREN ARROW TYPINT LBRACES expression COMMA expression RETURN LSQRBRACK ID COMMA ID RSQRBRACK RBRACES
Rule 11    term -> FUNC LPAREN ID RPAREN ARROW TYPINT LBRACES expression RETURN ID RBRACES
Rule 12    term -> FUNC LPAREN ID COMMA ID RPAREN ARROW TYPSTRING LBRACES expression COMMA expression RETURN LSQRBRACK ID COMMA ID RSQRBRACK RBRACES
Rule 13    term -> FUNC LPAREN ID RPAREN ARROW TYPSTRING LBRACES expression RETURN ID RBRACES
Rule 14    term -> SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
Rule 15    term -> comparison ASK expression COLON expression
Rule 16    term -> IF LPAREN comparison RPAREN term
Rule 17    term -> IF LPAREN comparison RPAREN term ELSE term
Rule 18    comparison -> expression EQUAL term
Rule 19    comparison -> expression NOTEQ term
Rule 20    comparison -> expression LARGE term
Rule 21    comparison -> expression SMALL term
Rule 22    comparison -> expression LRGEQ term
Rule 23    comparison -> expression SMLEQ term
Rule 24    comparison -> term EQUAL term
Rule 25    comparison -> term NOTEQ term
Rule 26    comparison -> term LARGE term
Rule 27    comparison -> term SMALL term
Rule 28    term -> WHILE LPAREN comparison RPAREN term
Rule 29    term -> FOR LPAREN ID IN factor RPAREN term
Rule 30    term -> term TIMES factor
Rule 31    term -> PI TIMES factor
Rule 32    term -> ID TIMES expression
Rule 33    term -> term DIVIDE factor
Rule 34    term -> PI DIVIDE factor
Rule 35    term -> ID DIVIDE expression
Rule 36    term -> ID EQUALS factor
Rule 37    term -> ID EQUALS LPAREN term COMMA term RPAREN
Rule 38    term -> term SHL factor
Rule 39    term -> ID SHL expression
Rule 40    term -> term SHR factor
Rule 41    term -> ID SHR expression
Rule 42    term -> term MOD factor
Rule 43    term -> ID MOD expression
Rule 44    term -> term ANDLOGIC factor
Rule 45    term -> ID ANDLOGIC expression
Rule 46    term -> term ORLOGIC factor
Rule 47    term -> ID ORLOGIC expression
Rule 48    term -> term XORLOGIC factor
Rule 49    term -> ID XORLOGIC expression
Rule 50    term -> OPEN LPAREN factor RPAREN
Rule 51    term -> WRITE LPAREN expression COMMA expression RPAREN
Rule 52    term -> POW LPAREN factor COMMA factor RPAREN
Rule 53    term -> LOG LPAREN factor RPAREN
Rule 54    term -> LOG LPAREN factor COMMA factor RPAREN
Rule 55    term -> LOG10 LPAREN factor RPAREN
Rule 56    term -> LOG1P LPAREN factor RPAREN
Rule 57    term -> EXP LPAREN factor RPAREN
Rule 58    term -> SQRT LPAREN factor RPAREN
Rule 59    term -> COS LPAREN factor RPAREN
Rule 60    term -> SIN LPAREN factor RPAREN
Rule 61    term -> TAN LPAREN factor RPAREN
Rule 62    term -> TYPE LPAREN expression RPAREN
Rule 63    term -> TYPE LPAREN ID RPAREN
Rule 64    term -> PI
Rule 65    term -> E
Rule 66    term -> VAR COLON TYPINT ID EQUALS factor
Rule 67    term -> VAR COLON TYPSTRING ID EQUALS factor
Rule 68    term -> LET ID EQUALS factor
Rule 69    expression -> PRINT expression
Rule 70    expression -> PRINT ID
Rule 71    expression -> PRINT LPAREN expression COMMA expression RPAREN
Rule 72    expression -> ID EQUALS LPAREN LAMBDA ID DOT expression RPAREN
Rule 73    expression -> LIST DOT CREATENODE LPAREN expression RPAREN
Rule 74    expression -> LIST DOT ADD LPAREN expression RPAREN
Rule 75    expression -> LIST DOT PRINT LPAREN RPAREN
Rule 76    expression -> DICTIONARY LPAREN expression COMMA expression RPAREN
Rule 77    expression -> ASSERTEQUALS LPAREN expression COMMA expression RPAREN
Rule 78    term -> factor
Rule 79    term -> ID
Rule 80    factor -> NUMBER
Rule 81    factor -> DECIMAL
Rule 82    factor -> STRING
Rule 83    factor -> EXIT
Rule 84    factor -> HELP
Rule 85    factor -> COPYRIGHT
Rule 86    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ADD                  : 74
ANDLOGIC             : 44 45
ARROW                : 10 11 12 13
ASK                  : 15
ASSERTEQUALS         : 77
ASYNC                : 
BOOL                 : 
CALLBACK             : 
CASE                 : 14
COLON                : 14 14 15 66 67
COMMA                : 10 10 10 12 12 12 37 51 52 54 71 76 77
COPYRIGHT            : 85
COS                  : 59
CREATENODE           : 73
DECIMAL              : 81
DEFAULT              : 14
DICTIONARY           : 76
DIVIDE               : 33 34 35
DOT                  : 72 73 74 75
E                    : 65
ELSE                 : 17
EQUAL                : 18 24
EQUALS               : 36 37 66 67 68 72
EXIT                 : 83
EXP                  : 57
FLOAT                : 
FOR                  : 29
FUNC                 : 9 10 11 12 13
HELP                 : 84
ID                   : 3 6 10 10 10 10 11 11 12 12 12 12 13 13 29 32 35 36 37 39 41 43 45 47 49 63 66 67 68 70 72 72 79
IF                   : 16 17
IN                   : 29
INT                  : 
IS                   : 
LAMBDA               : 72
LARGE                : 20 26
LBRACES              : 9 10 11 12 13 14
LET                  : 68
LIST                 : 73 74 75
LOG                  : 53 54
LOG10                : 55
LOG1P                : 56
LPAREN               : 9 10 11 12 13 16 17 28 29 37 50 51 52 53 54 55 56 57 58 59 60 61 62 63 71 72 73 74 75 76 77 86
LRGEQ                : 22
LSQRBRACK            : 10 12
MINUS                : 4 5 6 7
MOD                  : 42 43
NOT                  : 
NOTEQ                : 19 25
NUMBER               : 80
OPEN                 : 50
ORLOGIC              : 46 47
PI                   : 2 5 31 34 64
PLUS                 : 1 2 3
POW                  : 52
PRINT                : 69 70 71 75
QUOTES               : 
RBRACES              : 9 10 11 12 13 14
RETURN               : 10 11 12 13
RPAREN               : 9 10 11 12 13 16 17 28 29 37 50 51 52 53 54 55 56 57 58 59 60 61 62 63 71 72 73 74 75 76 77 86
RSQRBRACK            : 10 12
SEMICOLON            : 
SHL                  : 38 39
SHR                  : 40 41
SIN                  : 60
SMALL                : 21 27
SMLEQ                : 23
SQRT                 : 58
STRING               : 82
SWITCH               : 14
TAN                  : 61
TIMES                : 30 31 32
TYPE                 : 62 63
TYPINT               : 10 11 66
TYPSTRING            : 12 13 67
VAR                  : 66 67
WHILE                : 28
WRITE                : 51
XORLOGIC             : 48 49
error                : 

Nonterminals, with rules where they appear

comparison           : 15 16 17 28
expression           : 1 3 4 6 9 10 10 11 12 12 13 14 14 14 14 15 15 18 19 20 21 22 23 32 35 39 41 43 45 47 49 51 51 62 69 71 71 72 73 74 76 76 77 77 86 0
factor               : 29 30 31 33 34 36 38 40 42 44 46 48 50 52 52 53 54 54 55 56 57 58 59 60 61 66 67 68 78
term                 : 1 2 4 5 7 8 16 17 17 18 19 20 21 22 23 24 24 25 25 26 26 27 27 28 29 30 33 37 37 38 40 42 44 46 48

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . PI PLUS term
    (3) expression -> . ID PLUS expression
    (4) expression -> . expression MINUS term
    (5) expression -> . PI MINUS term
    (6) expression -> . ID MINUS expression
    (7) expression -> . MINUS term
    (8) expression -> . term
    (69) expression -> . PRINT expression
    (70) expression -> . PRINT ID
    (71) expression -> . PRINT LPAREN expression COMMA expression RPAREN
    (72) expression -> . ID EQUALS LPAREN LAMBDA ID DOT expression RPAREN
    (73) expression -> . LIST DOT CREATENODE LPAREN expression RPAREN
    (74) expression -> . LIST DOT ADD LPAREN expression RPAREN
    (75) expression -> . LIST DOT PRINT LPAREN RPAREN
    (76) expression -> . DICTIONARY LPAREN expression COMMA expression RPAREN
    (77) expression -> . ASSERTEQUALS LPAREN expression COMMA expression RPAREN
    (9) term -> . FUNC LPAREN RPAREN LBRACES expression RBRACES
    (10) term -> . FUNC LPAREN ID COMMA ID RPAREN ARROW TYPINT LBRACES expression COMMA expression RETURN LSQRBRACK ID COMMA ID RSQRBRACK RBRACES
    (11) term -> . FUNC LPAREN ID RPAREN ARROW TYPINT LBRACES expression RETURN ID RBRACES
    (12) term -> . FUNC LPAREN ID COMMA ID RPAREN ARROW TYPSTRING LBRACES expression COMMA expression RETURN LSQRBRACK ID COMMA ID RSQRBRACK RBRACES
    (13) term -> . FUNC LPAREN ID RPAREN ARROW TYPSTRING LBRACES expression RETURN ID RBRACES
    (14) term -> . SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
    (15) term -> . comparison ASK expression COLON expression
    (16) term -> . IF LPAREN comparison RPAREN term
    (17) term -> . IF LPAREN comparison RPAREN term ELSE term
    (28) term -> . WHILE LPAREN comparison RPAREN term
    (29) term -> . FOR LPAREN ID IN factor RPAREN term
    (30) term -> . term TIMES factor
    (31) term -> . PI TIMES factor
    (32) term -> . ID TIMES expression
    (33) term -> . term DIVIDE factor
    (34) term -> . PI DIVIDE factor
    (35) term -> . ID DIVIDE expression
    (36) term -> . ID EQUALS factor
    (37) term -> . ID EQUALS LPAREN term COMMA term RPAREN
    (38) term -> . term SHL factor
    (39) term -> . ID SHL expression
    (40) term -> . term SHR factor
    (41) term -> . ID SHR expression
    (42) term -> . term MOD factor
    (43) term -> . ID MOD expression
    (44) term -> . term ANDLOGIC factor
    (45) term -> . ID ANDLOGIC expression
    (46) term -> . term ORLOGIC factor
    (47) term -> . ID ORLOGIC expression
    (48) term -> . term XORLOGIC factor
    (49) term -> . ID XORLOGIC expression
    (50) term -> . OPEN LPAREN factor RPAREN
    (51) term -> . WRITE LPAREN expression COMMA expression RPAREN
    (52) term -> . POW LPAREN factor COMMA factor RPAREN
    (53) term -> . LOG LPAREN factor RPAREN
    (54) term -> . LOG LPAREN factor COMMA factor RPAREN
    (55) term -> . LOG10 LPAREN factor RPAREN
    (56) term -> . LOG1P LPAREN factor RPAREN
    (57) term -> . EXP LPAREN factor RPAREN
    (58) term -> . SQRT LPAREN factor RPAREN
    (59) term -> . COS LPAREN factor RPAREN
    (60) term -> . SIN LPAREN factor RPAREN
    (61) term -> . TAN LPAREN factor RPAREN
    (62) term -> . TYPE LPAREN expression RPAREN
    (63) term -> . TYPE LPAREN ID RPAREN
    (64) term -> . PI
    (65) term -> . E
    (66) term -> . VAR COLON TYPINT ID EQUALS factor
    (67) term -> . VAR COLON TYPSTRING ID EQUALS factor
    (68) term -> . LET ID EQUALS factor
    (78) term -> . factor
    (79) term -> . ID
    (18) comparison -> . expression EQUAL term
    (19) comparison -> . expression NOTEQ term
    (20) comparison -> . expression LARGE term
    (21) comparison -> . expression SMALL term
    (22) comparison -> . expression LRGEQ term
    (23) comparison -> . expression SMLEQ term
    (24) comparison -> . term EQUAL term
    (25) comparison -> . term NOTEQ term
    (26) comparison -> . term LARGE term
    (27) comparison -> . term SMALL term
    (80) factor -> . NUMBER
    (81) factor -> . DECIMAL
    (82) factor -> . STRING
    (83) factor -> . EXIT
    (84) factor -> . HELP
    (85) factor -> . COPYRIGHT
    (86) factor -> . LPAREN expression RPAREN

    PI              shift and go to state 3
    ID              shift and go to state 4
    MINUS           shift and go to state 5
    PRINT           shift and go to state 6
    LIST            shift and go to state 8
    DICTIONARY      shift and go to state 9
    ASSERTEQUALS    shift and go to state 10
    FUNC            shift and go to state 11
    SWITCH          shift and go to state 12
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    OPEN            shift and go to state 18
    WRITE           shift and go to state 19
    POW             shift and go to state 20
    LOG             shift and go to state 21
    LOG10           shift and go to state 22
    LOG1P           shift and go to state 23
    EXP             shift and go to state 24
    SQRT            shift and go to state 25
    COS             shift and go to state 26
    SIN             shift and go to state 27
    TAN             shift and go to state 28
    TYPE            shift and go to state 29
    E               shift and go to state 30
    VAR             shift and go to state 31
    LET             shift and go to state 32
    NUMBER          shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    EXIT            shift and go to state 36
    HELP            shift and go to state 37
    COPYRIGHT       shift and go to state 38
    LPAREN          shift and go to state 7

    expression                     shift and go to state 1
    term                           shift and go to state 2
    comparison                     shift and go to state 13
    factor                         shift and go to state 17

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (4) expression -> expression . MINUS term
    (18) comparison -> expression . EQUAL term
    (19) comparison -> expression . NOTEQ term
    (20) comparison -> expression . LARGE term
    (21) comparison -> expression . SMALL term
    (22) comparison -> expression . LRGEQ term
    (23) comparison -> expression . SMLEQ term

    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    EQUAL           shift and go to state 41
    NOTEQ           shift and go to state 42
    LARGE           shift and go to state 43
    SMALL           shift and go to state 44
    LRGEQ           shift and go to state 45
    SMLEQ           shift and go to state 46


state 2

    (8) expression -> term .
    (30) term -> term . TIMES factor
    (33) term -> term . DIVIDE factor
    (38) term -> term . SHL factor
    (40) term -> term . SHR factor
    (42) term -> term . MOD factor
    (44) term -> term . ANDLOGIC factor
    (46) term -> term . ORLOGIC factor
    (48) term -> term . XORLOGIC factor
    (24) comparison -> term . EQUAL term
    (25) comparison -> term . NOTEQ term
    (26) comparison -> term . LARGE term
    (27) comparison -> term . SMALL term

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for SHL resolved as shift
  ! shift/reduce conflict for SHR resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for ANDLOGIC resolved as shift
  ! shift/reduce conflict for ORLOGIC resolved as shift
  ! shift/reduce conflict for XORLOGIC resolved as shift
  ! shift/reduce conflict for EQUAL resolved as shift
  ! shift/reduce conflict for NOTEQ resolved as shift
  ! shift/reduce conflict for LARGE resolved as shift
  ! shift/reduce conflict for SMALL resolved as shift
    PLUS            reduce using rule 8 (expression -> term .)
    MINUS           reduce using rule 8 (expression -> term .)
    LRGEQ           reduce using rule 8 (expression -> term .)
    SMLEQ           reduce using rule 8 (expression -> term .)
    $end            reduce using rule 8 (expression -> term .)
    RPAREN          reduce using rule 8 (expression -> term .)
    LBRACES         reduce using rule 8 (expression -> term .)
    ASK             reduce using rule 8 (expression -> term .)
    COMMA           reduce using rule 8 (expression -> term .)
    COLON           reduce using rule 8 (expression -> term .)
    RBRACES         reduce using rule 8 (expression -> term .)
    ELSE            reduce using rule 8 (expression -> term .)
    DEFAULT         reduce using rule 8 (expression -> term .)
    RETURN          reduce using rule 8 (expression -> term .)
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48
    SHL             shift and go to state 49
    SHR             shift and go to state 50
    MOD             shift and go to state 51
    ANDLOGIC        shift and go to state 52
    ORLOGIC         shift and go to state 53
    XORLOGIC        shift and go to state 54
    EQUAL           shift and go to state 55
    NOTEQ           shift and go to state 56
    LARGE           shift and go to state 57
    SMALL           shift and go to state 58

  ! EQUAL           [ reduce using rule 8 (expression -> term .) ]
  ! NOTEQ           [ reduce using rule 8 (expression -> term .) ]
  ! LARGE           [ reduce using rule 8 (expression -> term .) ]
  ! SMALL           [ reduce using rule 8 (expression -> term .) ]
  ! TIMES           [ reduce using rule 8 (expression -> term .) ]
  ! DIVIDE          [ reduce using rule 8 (expression -> term .) ]
  ! SHL             [ reduce using rule 8 (expression -> term .) ]
  ! SHR             [ reduce using rule 8 (expression -> term .) ]
  ! MOD             [ reduce using rule 8 (expression -> term .) ]
  ! ANDLOGIC        [ reduce using rule 8 (expression -> term .) ]
  ! ORLOGIC         [ reduce using rule 8 (expression -> term .) ]
  ! XORLOGIC        [ reduce using rule 8 (expression -> term .) ]


state 3

    (2) expression -> PI . PLUS term
    (5) expression -> PI . MINUS term
    (31) term -> PI . TIMES factor
    (34) term -> PI . DIVIDE factor
    (64) term -> PI .

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    PLUS            shift and go to state 59
    MINUS           shift and go to state 60
    TIMES           shift and go to state 61
    DIVIDE          shift and go to state 62
    SHL             reduce using rule 64 (term -> PI .)
    SHR             reduce using rule 64 (term -> PI .)
    MOD             reduce using rule 64 (term -> PI .)
    ANDLOGIC        reduce using rule 64 (term -> PI .)
    ORLOGIC         reduce using rule 64 (term -> PI .)
    XORLOGIC        reduce using rule 64 (term -> PI .)
    EQUAL           reduce using rule 64 (term -> PI .)
    NOTEQ           reduce using rule 64 (term -> PI .)
    LARGE           reduce using rule 64 (term -> PI .)
    SMALL           reduce using rule 64 (term -> PI .)
    LRGEQ           reduce using rule 64 (term -> PI .)
    SMLEQ           reduce using rule 64 (term -> PI .)
    $end            reduce using rule 64 (term -> PI .)
    RPAREN          reduce using rule 64 (term -> PI .)
    LBRACES         reduce using rule 64 (term -> PI .)
    ASK             reduce using rule 64 (term -> PI .)
    COMMA           reduce using rule 64 (term -> PI .)
    COLON           reduce using rule 64 (term -> PI .)
    RBRACES         reduce using rule 64 (term -> PI .)
    ELSE            reduce using rule 64 (term -> PI .)
    DEFAULT         reduce using rule 64 (term -> PI .)
    RETURN          reduce using rule 64 (term -> PI .)

  ! TIMES           [ reduce using rule 64 (term -> PI .) ]
  ! DIVIDE          [ reduce using rule 64 (term -> PI .) ]
  ! PLUS            [ reduce using rule 64 (term -> PI .) ]
  ! MINUS           [ reduce using rule 64 (term -> PI .) ]


state 4

    (3) expression -> ID . PLUS expression
    (6) expression -> ID . MINUS expression
    (72) expression -> ID . EQUALS LPAREN LAMBDA ID DOT expression RPAREN
    (32) term -> ID . TIMES expression
    (35) term -> ID . DIVIDE expression
    (36) term -> ID . EQUALS factor
    (37) term -> ID . EQUALS LPAREN term COMMA term RPAREN
    (39) term -> ID . SHL expression
    (41) term -> ID . SHR expression
    (43) term -> ID . MOD expression
    (45) term -> ID . ANDLOGIC expression
    (47) term -> ID . ORLOGIC expression
    (49) term -> ID . XORLOGIC expression
    (79) term -> ID .

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for SHL resolved as shift
  ! shift/reduce conflict for SHR resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for ANDLOGIC resolved as shift
  ! shift/reduce conflict for ORLOGIC resolved as shift
  ! shift/reduce conflict for XORLOGIC resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    EQUALS          shift and go to state 65
    TIMES           shift and go to state 66
    DIVIDE          shift and go to state 67
    SHL             shift and go to state 68
    SHR             shift and go to state 69
    MOD             shift and go to state 70
    ANDLOGIC        shift and go to state 71
    ORLOGIC         shift and go to state 72
    XORLOGIC        shift and go to state 73
    EQUAL           reduce using rule 79 (term -> ID .)
    NOTEQ           reduce using rule 79 (term -> ID .)
    LARGE           reduce using rule 79 (term -> ID .)
    SMALL           reduce using rule 79 (term -> ID .)
    LRGEQ           reduce using rule 79 (term -> ID .)
    SMLEQ           reduce using rule 79 (term -> ID .)
    $end            reduce using rule 79 (term -> ID .)
    RPAREN          reduce using rule 79 (term -> ID .)
    LBRACES         reduce using rule 79 (term -> ID .)
    ASK             reduce using rule 79 (term -> ID .)
    COMMA           reduce using rule 79 (term -> ID .)
    COLON           reduce using rule 79 (term -> ID .)
    RBRACES         reduce using rule 79 (term -> ID .)
    ELSE            reduce using rule 79 (term -> ID .)
    DEFAULT         reduce using rule 79 (term -> ID .)
    RETURN          reduce using rule 79 (term -> ID .)

  ! TIMES           [ reduce using rule 79 (term -> ID .) ]
  ! DIVIDE          [ reduce using rule 79 (term -> ID .) ]
  ! SHL             [ reduce using rule 79 (term -> ID .) ]
  ! SHR             [ reduce using rule 79 (term -> ID .) ]
  ! MOD             [ reduce using rule 79 (term -> ID .) ]
  ! ANDLOGIC        [ reduce using rule 79 (term -> ID .) ]
  ! ORLOGIC         [ reduce using rule 79 (term -> ID .) ]
  ! XORLOGIC        [ reduce using rule 79 (term -> ID .) ]
  ! PLUS            [ reduce using rule 79 (term -> ID .) ]
  ! MINUS           [ reduce using rule 79 (term -> ID .) ]


state 5

    (7) expression -> MINUS . term
    (9) term -> . FUNC LPAREN RPAREN LBRACES expression RBRACES
    (10) term -> . FUNC LPAREN ID COMMA ID RPAREN ARROW TYPINT LBRACES expression COMMA expression RETURN LSQRBRACK ID COMMA ID RSQRBRACK RBRACES
    (11) term -> . FUNC LPAREN ID RPAREN ARROW TYPINT LBRACES expression RETURN ID RBRACES
    (12) term -> . FUNC LPAREN ID COMMA ID RPAREN ARROW TYPSTRING LBRACES expression COMMA expression RETURN LSQRBRACK ID COMMA ID RSQRBRACK RBRACES
    (13) term -> . FUNC LPAREN ID RPAREN ARROW TYPSTRING LBRACES expression RETURN ID RBRACES
    (14) term -> . SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
    (15) term -> . comparison ASK expression COLON expression
    (16) term -> . IF LPAREN comparison RPAREN term
    (17) term -> . IF LPAREN comparison RPAREN term ELSE term
    (28) term -> . WHILE LPAREN comparison RPAREN term
    (29) term -> . FOR LPAREN ID IN factor RPAREN term
    (30) term -> . term TIMES factor
    (31) term -> . PI TIMES factor
    (32) term -> . ID TIMES expression
    (33) term -> . term DIVIDE factor
    (34) term -> . PI DIVIDE factor
    (35) term -> . ID DIVIDE expression
    (36) term -> . ID EQUALS factor
    (37) term -> . ID EQUALS LPAREN term COMMA term RPAREN
    (38) term -> . term SHL factor
    (39) term -> . ID SHL expression
    (40) term -> . term SHR factor
    (41) term -> . ID SHR expression
    (42) term -> . term MOD factor
    (43) term -> . ID MOD expression
    (44) term -> . term ANDLOGIC factor
    (45) term -> . ID ANDLOGIC expression
    (46) term -> . term ORLOGIC factor
    (47) term -> . ID ORLOGIC expression
    (48) term -> . term XORLOGIC factor
    (49) term -> . ID XORLOGIC expression
    (50) term -> . OPEN LPAREN factor RPAREN
    (51) term -> . WRITE LPAREN expression COMMA expression RPAREN
    (52) term -> . POW LPAREN factor COMMA factor RPAREN
    (53) term -> . LOG LPAREN factor RPAREN
    (54) term -> . LOG LPAREN factor COMMA factor RPAREN
    (55) term -> . LOG10 LPAREN factor RPAREN
    (56) term -> . LOG1P LPAREN factor RPAREN
    (57) term -> . EXP LPAREN factor RPAREN
    (58) term -> . SQRT LPAREN factor RPAREN
    (59) term -> . COS LPAREN factor RPAREN
    (60) term -> . SIN LPAREN factor RPAREN
    (61) term -> . TAN LPAREN factor RPAREN
    (62) term -> . TYPE LPAREN expression RPAREN
    (63) term -> . TYPE LPAREN ID RPAREN
    (64) term -> . PI
    (65) term -> . E
    (66) term -> . VAR COLON TYPINT ID EQUALS factor
    (67) term -> . VAR COLON TYPSTRING ID EQUALS factor
    (68) term -> . LET ID EQUALS factor
    (78) term -> . factor
    (79) term -> . ID
    (18) comparison -> . expression EQUAL term
    (19) comparison -> . expression NOTEQ term
    (20) comparison -> . expression LARGE term
    (21) comparison -> . expression SMALL term
    (22) comparison -> . expression LRGEQ term
    (23) comparison -> . expression SMLEQ term
    (24) comparison -> . term EQUAL term
    (25) comparison -> . term NOTEQ term
    (26) comparison -> . term LARGE term
    (27) comparison -> . term SMALL term
    (80) factor -> . NUMBER
    (81) factor -> . DECIMAL
    (82) factor -> . STRING
    (83) factor -> . EXIT
    (84) factor -> . HELP
    (85) factor -> . COPYRIGHT
    (86) factor -> . LPAREN expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . PI PLUS term
    (3) expression -> . ID PLUS expression
    (4) expression -> . expression MINUS term
    (5) expression -> . PI MINUS term
    (6) expression -> . ID MINUS expression
    (7) expression -> . MINUS term
    (8) expression -> . term
    (69) expression -> . PRINT expression
    (70) expression -> . PRINT ID
    (71) expression -> . PRINT LPAREN expression COMMA expression RPAREN
    (72) expression -> . ID EQUALS LPAREN LAMBDA ID DOT expression RPAREN
    (73) expression -> . LIST DOT CREATENODE LPAREN expression RPAREN
    (74) expression -> . LIST DOT ADD LPAREN expression RPAREN
    (75) expression -> . LIST DOT PRINT LPAREN RPAREN
    (76) expression -> . DICTIONARY LPAREN expression COMMA expression RPAREN
    (77) expression -> . ASSERTEQUALS LPAREN expression COMMA expression RPAREN

    FUNC            shift and go to state 11
    SWITCH          shift and go to state 12
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    PI              shift and go to state 77
    ID              shift and go to state 76
    OPEN            shift and go to state 18
    WRITE           shift and go to state 19
    POW             shift and go to state 20
    LOG             shift and go to state 21
    LOG10           shift and go to state 22
    LOG1P           shift and go to state 23
    EXP             shift and go to state 24
    SQRT            shift and go to state 25
    COS             shift and go to state 26
    SIN             shift and go to state 27
    TAN             shift and go to state 28
    TYPE            shift and go to state 29
    E               shift and go to state 30
    VAR             shift and go to state 31
    LET             shift and go to state 32
    NUMBER          shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    EXIT            shift and go to state 36
    HELP            shift and go to state 37
    COPYRIGHT       shift and go to state 38
    LPAREN          shift and go to state 7
    MINUS           shift and go to state 5
    PRINT           shift and go to state 6
    LIST            shift and go to state 8
    DICTIONARY      shift and go to state 9
    ASSERTEQUALS    shift and go to state 10

    term                           shift and go to state 74
    expression                     shift and go to state 75
    comparison                     shift and go to state 13
    factor                         shift and go to state 17

state 6
